--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -40,7 +40,7 @@
                   <div class="numbers">
                     <p class="text-sm mb-0 text-capitalize font-weight-bold">Opened Issues</p>
                     <h5 class="font-weight-bolder mb-0">
-                      0
+                      {{ stats.opened_issues }}
                     </h5>
                   </div>
                 </div>
@@ -61,7 +61,7 @@
                   <div class="numbers">
                     <p class="text-sm mb-0 text-capitalize font-weight-bold">Opened Pull Requests</p>
                     <h5 class="font-weight-bolder mb-0">
-                      0
+                      {{ stats.opened_pulls }}
 {#                      <span class="text-danger text-sm font-weight-bolder">-2%</span>#}
                     </h5>
                   </div>
@@ -83,7 +83,7 @@
                   <div class="numbers">
                     <p class="text-sm mb-0 text-capitalize font-weight-bold">LOC changed</p>
                     <h5 class="font-weight-bolder mb-0">
-                        0
+                        {{ stats.changed_loc }}
 {#                      $103,430#}
 {#                      <span class="text-success text-sm font-weight-bolder">+5%</span>#}
                     </h5>
@@ -132,7 +132,9 @@
                           <img src="{{ team.img_link }}" class="avatar avatar-sm me-3" alt="{{ team.name }}">
                         </div>
                         <div class="d-flex flex-column justify-content-center">
-                          <h6 class="mb-0 text-sm">{{ team.name }}</h6>
+                          <h6 class="mb-0 text-sm">
+                            <a href="{{ url_for('home_blueprint.team_info', id=team.team_id) }}">{{ team.name }}</a>
+                          </h6>
                         </div>
                       </div>
                     </td>
