--- a/apps/templates/home/teams.html
+++ b/apps/templates/home/teams.html
@@ -35,7 +35,9 @@
                           <img src="{{ team.img_link }}" class="avatar avatar-sm me-3" alt="team logo" title="{{ team.name }}">
                         </div>
                         <div class="d-flex flex-column justify-content-center">
-                          <h6 class="mb-0 text-sm">{{ team.name }}</h6>
+                          <h6 class="mb-0 text-sm">
+                            <a href="{{ url_for('home_blueprint.team_info', id=team.team_id) }}">{{ team.name }}</a>
+                          </h6>
                         </div>
                       </div>
                     </td>
